[gd_scene load_steps=9 format=3 uid="uid://cab2q7cer6567"]

[ext_resource type="Script" path="res://ShopManager.gd" id="1_07efy"]
[ext_resource type="PackedScene" uid="uid://c2foh3xf7xqox" path="res://ore_box.tscn" id="2_lioss"]
[ext_resource type="PackedScene" uid="uid://e5cetnbk6s3o" path="res://forge.tscn" id="3_oi4xx"]
[ext_resource type="PackedScene" uid="uid://b050eg4ti6ipn" path="res://anvil.tscn" id="4_aakto"]
[ext_resource type="Texture2D" uid="uid://dgvx3do8qxc35" path="res://Assets/Sprites/ShopScene/stallObjects_.png" id="4_kseq3"]
[ext_resource type="PackedScene" uid="uid://devtoi3ah4vy2" path="res://Player.tscn" id="5_lp5dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmlun"]
size = Vector2(20, 25.8397)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lui1a"]
size = Vector2(14.6738, 14.2557)

[node name="Shop" type="Node2D"]
script = ExtResource("1_07efy")

[node name="OreBox" parent="." instance=ExtResource("2_lioss")]

[node name="Forge" parent="." instance=ExtResource("3_oi4xx")]

[node name="Anvil" parent="." instance=ExtResource("4_aakto")]
position = Vector2(824, 185)

[node name="CashRegister" type="Sprite2D" parent="."]
texture_filter = 5
position = Vector2(177, 392)
scale = Vector2(6.67857, 6.31325)
texture = ExtResource("4_kseq3")
region_enabled = true
region_rect = Rect2(40.431, 87.2699, 14.7292, 15.2698)

[node name="Area2D" type="Area2D" parent="CashRegister"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CashRegister/Area2D"]
position = Vector2(0, -2.91986)
shape = SubResource("RectangleShape2D_hmlun")

[node name="RigidBody2D" type="RigidBody2D" parent="CashRegister"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CashRegister/RigidBody2D"]
position = Vector2(0.149733, 0.633587)
shape = SubResource("RectangleShape2D_lui1a")
debug_color = Color(0.960784, 0, 0.505882, 0.419608)

[node name="Player" parent="." instance=ExtResource("5_lp5dw")]
position = Vector2(622, 401)

[connection signal="interacted" from="Player" to="." method="_on_player_interacted"]
